--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
   <!-- Nav-bar started -->
    <div class="nav-bar border-bottom">
-       <div class="box2">
+       <div class="nav-box">
            <img src="images/logo-pic.png" alt="logo-pic" />
            <ul>
-             <li><a href="#">Home</a></li>
+             <li><a id="blue-color" href="#">Home</a></li>
              <li><a href="#">About</a></li>
              <li><a href="#">Services</a></li>
              <li><a href="#">Media</a></li>
@@ -52,10 +52,29 @@
        </div>
    </div>
   <!-- Nav-bar ended -->
+ 
+  <!-- markking box started -->
+      
+   <div class="banner-container">
+       <div class="content-box">
+            <h1 class="fonts fs-0 fw-bold">Welcome to the <br /><span id="grenn">Saylani</span> Welfare</h1>
+            <h2 class="font">The largest NGO offering free education,|</h2>
+            <p>Saylani Welfare is on the ground and already working with local 
+              communities to assess how best to support underprivileged families 
+              in more than 63 areas of day to day lives.</p>
+              <a href="#">Explorer more
+                 <img src="images/right-arrow.png" class="right-arrow" alt="right-arrow-icon" />
+              </a>
+       </div>
+       <div class="content-img">
+           <img src="images/hero-pic.png" class="hero-pic" alt="hero-pic" />
+       </div>
+   </div>  
+
+  <!-- markking box ended  -->
 
 
-
-
+  <br /><br /><br /><br /><br />
 
 
 
